Walk thtough LESS till mixins

--- a/less-way/buttons.html
+++ b/less-way/buttons.html
@@ -1,15 +1,14 @@
 <html>
   <head>
     <script src="//localhost:35729/livereload.js"></script>
-    <link rel="stylesheet" href="css/base.css"></link>
-    <link rel="stylesheet" href="css/buttons.css"></link>
+    <link rel="stylesheet" href="css/app.css"></link>
   </head>
   <body>
-    <button class="btn btn-default">Default</button>
-    <button class="btn btn-primary">Primarys</button>
-    <button class="btn btn-success">Success</button>
-    <button class="btn btn-info">Info</button>
-    <button class="btn btn-warning">Warning</button>
-    <button class="btn btn-danger">Danger</button>
+    <button class="btn-default">Default</button>
+    <button class="btn-primary">Primarys</button>
+    <button class="btn-success">Success</button>
+    <button class="btn-info">Info</button>
+    <button class="btn-warning">Warning</button>
+    <button class="btn-danger">Danger</button>
   </body>
 </html>
