--- a/less-way/buttons.html
+++ b/less-way/buttons.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <button class="btn-default">Default</button>
-    <button class="btn-primary">Primarys</button>
+    <button class="btn-primary">Primary</button>
     <button class="btn-success">Success</button>
     <button class="btn-info">Info</button>
     <button class="btn-warning">Warning</button>
